# OS-Labs

Lab1/: Daemon.cpp  Daemon.h  README.md  build.sh  config.txt  daemon.cpp  main.cpp
Lab2/: CMakeLists.txt  README.md  conn.h  conn_mmap.cpp  conn_pipe.cpp  conn_shm.cpp  host.cpp
lab3/: CMakeLists.txt  README.md  lab.cpp
